--- a/app/src/main/res/layout/activity_food_app.xml
+++ b/app/src/main/res/layout/activity_food_app.xml
@@ -26,15 +26,17 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="2dp"
+    android:gravity="center"
     android:orientation="horizontal"
     android:id="@+id/layout_address">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_margin="10dp"
         android:textStyle="bold"
         android:text="Delivery To:"
-        android:textSize="12sp"
+        android:textSize="14sp"
 
         />
     <TextView
@@ -42,16 +44,16 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:textSize="13sp"
-        android:layout_margin="5dp"
+        android:layout_margin="10dp"
         android:maxLength="40"
         android:text="c1, monallee tower, bastola"
 
         />
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:src="@drawable/ic_arrow_forward_black_24dp"
-        android:layout_margin="5dp"
+
         android:layout_gravity="right"/>
 </LinearLayout>
 
