--- a/app/src/main/res/layout/activity_search_restaurant.xml
+++ b/app/src/main/res/layout/activity_search_restaurant.xml
@@ -19,21 +19,25 @@
 
     </androidx.appcompat.widget.Toolbar>
 
+
+
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchItems"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
+        app:iconifiedByDefault="false"
         app:queryHint="Search Restaurant, food items...">
 
 
-    </androidx.appcompat.widget.SearchView>
+    </androidx.appcompat.widget.SearchView>-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="right"
+
         android:orientation="horizontal"
+        android:layout_margin="10dp"
         android:id="@+id/layout_map_address">
         <TextView
             android:layout_width="wrap_content"
@@ -41,13 +45,13 @@
             android:layout_margin="5dp"
             android:textStyle="bold"
             android:text="Searching near"
-            android:textSize="12sp"
-            android:gravity="center"
+            android:textSize="14sp"
+
 
             />
         <TextView
             android:id="@+id/tv_delivery_address"
-            android:layout_width="250dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"
             android:layout_margin="5dp"
@@ -55,17 +59,18 @@
 
             />
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_arrow_forward_black_24dp"
 
-            android:layout_gravity="center"/>
+            android:layout_gravity="right"/>
     </LinearLayout>
     <TextView
         android:id="@+id/tv_search_result_for"
         android:layout_width="match_parent"
         android:layout_height="32dp"
         android:layout_margin="15dp"
+
         android:text="Restaurant"
         android:textColor="#4CAF50"
         android:textSize="20sp"
@@ -73,8 +78,8 @@
 
     <ProgressBar
         android:id="@+id/pv_restaurant_list_search"
-        android:layout_width="42dp"
-        android:layout_height="42dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_gravity="center"
         android:visibility="invisible" />
 
