--- a/app/src/main/res/layout/tab_fragment_nearby_restaurant_list.xml
+++ b/app/src/main/res/layout/tab_fragment_nearby_restaurant_list.xml
@@ -36,7 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_margin="10dp"
@@ -45,6 +45,7 @@
                         android:id="@+id/tv_item_number"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginRight="140dp"
                         android:text="Burger King"
                         android:textSize="15sp"
                         android:textStyle="bold"
@@ -66,7 +67,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Operation" />
+                        android:text="Operation Time" />
 
                     <TextView
                         android:id="@+id/tv_opening_closing"
