--- a/app/src/main/res/layout/activity_current_order_history.xml
+++ b/app/src/main/res/layout/activity_current_order_history.xml
@@ -446,6 +446,7 @@
             </RelativeLayout>
 
             <Button
+                android:id="@+id/btn_go_back_home"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Go Back Home"
